# molecool

./: Cargo.toml
src/: lib.rs  pse_data.rs
src/atom/: mod.rs
src/molekel/: mod.rs
src/molekel/electronic_energy/: mod.rs
src/molekel/electronic_energy/integrals/: mod.rs
src/molekel/electronic_energy/integrals/from_file/: mod.rs
src/molekel/electronic_energy/wf/: hf.rs
src/molekel/properties/: mod.rs
tests/: cl_b_geom.xyz  cl_b_hessian.txt  file_setup.rs  h2o_geom.xyz  integration_test.rs  test_acetaldehyde_symbolic.xyz
tests/water_integrals/: mod.rs
