[package]
name = "molecool"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
coordinate_systems = { version = "2.0.0", path = "../coordinate_systems" }
lazy_static = "1.4.0"
nalgebra = "0.32.2"
num = "0.4.1"
qc_file_parsers = { version = "2.0.1", path = "../qc_file_parsers" }
