[package]
name = "molecool"
version = "3.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
coordinate_systems = { version = "3.0.3", path = "../coordinate_systems" }
lazy_static = "1.4.0"
nalgebra = "0.32.2"
num = "0.4.1"
qc_file_parsers = { version = "3.0.0", path = "../qc_file_parsers" }
unit_conversion = { version = "0.3.0", path = "../unit_conversion" }
